[tool.poetry]
name = "m"
version = "0.1.0"
description = ""
authors = ["Manuel Lopez <jmlopez.rod@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.17.0"
PyYAML = "^6.0"
types-PyYAML = "^6.0.12.9"
pytest = "^7.3.1"
twine = "^4.0.2"
build = "^0.10.0"
pylint = "^2.17.3"
coverage = "^7.2.3"
isort = "^5.12.0"
pytest-mock = "^3.10.0"
pydantic = "^1.10.7"
Pygments = "^2.15.1"
types-Pygments = "^2.15.0.0"
mypy = "^1.2.0"
argcomplete = "^3.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
