[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.5.1"]

[tool]

[tool.poetry]
name = "m"
version = "0.1.0"
description = ""
authors = ["Manuel Lopez <jmlopez.rod@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typing_extensions = "*"
pydantic = ">=2.1.0"
pyyaml = "*"
packaging = "*"
pygments = ">=2.14.0"
argcomplete = "*"

[[tool.poetry.packages]]
from = "packages/python"
include = "m"

[tool.poetry.scripts]
m = "m.__main__:main"

[tool.poetry.group.build.dependencies]
wemake-python-styleguide = "^0.17.0"
PyYAML = "^6.0"
types-PyYAML = "^6.0.12.9"
pytest = "^7.3.1"
twine = "^4.0.2"
build = "^0.10.0"
pylint = "^2.17.3"
coverage = "^7.2.3"
isort = "^5.12.0"
pytest-mock = "^3.10.0"
pydantic = "^2.1.0"
Pygments = "^2.15.1"
types-Pygments = "^2.15.0.0"
mypy = "^1.2.0"
argcomplete = "^3.0.8"
ruff = "^0.0.285"
mkdocs-material = "^9.4.4"
