[project]
name = "m"
version = "0.0.0-dev0"
description = ""
authors = [{ name = "Manuel Lopez", email = "jmlopez.rod@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  'typing_extensions',
  'pydantic >=2.5.0',
  "PyYAML >=6.0.0, <7",
  'packaging',
  'pygments >=2.16.0',
  'argcomplete',
]

[dependency-groups]
dev = [
  "wemake-python-styleguide ==0.17.0",
  "PyYAML >=6.0.0, <7",
  "types-PyYAML >=6.0.12.9, <7",
  "pytest ==7.3.1",
  "twine ==5.1.1",
  "build ==0.10.0",
  "pylint ==2.17.3",
  "coverage ==7.2.3",
  "isort ==5.12.0",
  "pytest-mock ==3.10.0",
  "pydantic >=2.5.0",
  "Pygments >=2.16.0",
  "types-Pygments ==2.15.0.0",
  "mypy ==1.6.1",
  "argcomplete ==3.0.8",
  "ruff ==0.0.285",
]

docs = [
  "mkdocs-material >=9.4.4, <10",
  "mkdocstrings-python >=1.7.2, <2",
  "mkdocs-gen-files >=0.5.0, <1",
  "mkdocs-literate-nav >=0.6.1, <1",
  "mkdocs-section-index >=0.3.8, <1",
  "mkdocstrings-m-cli >=1.0.1, <2",
]

[tool.hatch.build.targets.wheel]
packages = ['packages/python/m']

[project.scripts]
m = "m.__main__:main"

[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']
